--- a/SmigieBackend/src/main/resources/application.properties
+++ b/SmigieBackend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=SmigieBackend
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=root
+spring.datasource.password=123456
